# cgp_data

./: .gitignore  ADR document first draft.md  pyproject.toml
