[tool.poetry]
name = "cgp-data"
version = "0.1.0"
description = "Data Warehousing for CondorGP"
authors = ["Hugh Harford <hugh.harford@poscoconsulting.com>"]
license = "tbc"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
